@@ -8,11 +8,12 @@ import com.tobe.healthy.member.domain.dto.MemberDto;
 import com.tobe.healthy.member.domain.entity.Member;
 import com.tobe.healthy.trainer.domain.entity.TrainerMemberMapping;
 import com.tobe.healthy.trainer.respository.TrainerMemberMappingRepository;
+import com.tobe.healthy.workout.domain.dto.CompletedExerciseDto;
 import com.tobe.healthy.workout.domain.dto.WorkoutHistoryDto;
 import com.tobe.healthy.workout.domain.dto.in.HistoryAddCommand;
-import com.tobe.healthy.workout.domain.entity.WorkoutHistory;
-import com.tobe.healthy.workout.domain.entity.WorkoutHistoryLike;
-import com.tobe.healthy.workout.domain.entity.WorkoutHistoryLikePK;
+import com.tobe.healthy.workout.domain.entity.*;
+import com.tobe.healthy.workout.repository.CompletedExerciseRepository;
+import com.tobe.healthy.workout.repository.ExerciseRepository;
 import com.tobe.healthy.workout.repository.WorkoutHistoryLikeRepository;
 import com.tobe.healthy.workout.repository.WorkoutHistoryRepository;
 import lombok.RequiredArgsConstructor;
@@ -22,11 +23,11 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
+import static com.tobe.healthy.config.error.ErrorCode.EXERCISE_NOT_FOUND;
 import static com.tobe.healthy.config.error.ErrorCode.WORKOUT_HISTORY_NOT_FOUND;
 import static java.io.File.separator;
 
@@ -40,6 +41,8 @@ public class WorkoutHistoryService {
     private final WorkoutHistoryLikeRepository workoutHistoryLikeRepository;
     private final WorkoutHistoryRepository workoutHistoryRepository;
     private final TrainerMemberMappingRepository mappingRepository;
+    private final CompletedExerciseRepository completedExerciseRepository;
+    private final ExerciseRepository exerciseRepository;
 
 
     @Transactional
@@ -47,49 +50,47 @@ public class WorkoutHistoryService {
         Optional<TrainerMemberMapping> mapping = mappingRepository.findTop1ByMemberIdOrderByCreatedAtDesc(member.getId());
         Long trainerId = mapping.map(TrainerMemberMapping::getTrainerId).orElse(null);
         MemberDto memberDto = MemberDto.from(member);
-        WorkoutHistoryDto workoutHistoryDto = WorkoutHistoryDto.from(command.getContent(), memberDto, command.getFiles(), trainerId);
+        WorkoutHistoryDto workoutHistoryDto = WorkoutHistoryDto.create(command, memberDto, trainerId);
         WorkoutHistory history = WorkoutHistory.create(workoutHistoryDto, member);
         workoutHistoryRepository.save(history);
+        saveCompletedExercises(history, command);
         fileService.uploadWorkoutFiles(history, command.getFiles());
-        List<Long> ids = Arrays.asList(history.getWorkoutHistoryId());
-        List<WorkoutHistoryFile> files = workoutHistoryRepository.getWorkoutHistoryFile(ids);
-        List<WorkoutHistoryFileDto> filesDto = files.stream().map(WorkoutHistoryFileDto::from).collect(Collectors.toList());
-        return WorkoutHistoryDto.from(history, filesDto);
+        return WorkoutHistoryDto.from(history);
+    }
+
+    private void saveCompletedExercises(WorkoutHistory history, HistoryAddCommand command) {
+        List<CompletedExercise> completedExercises = command.getCompletedExercises().stream()
+                .map(c -> {
+                    Exercise exercise = exerciseRepository.findById(c.getExerciseId()).orElseThrow(() -> new CustomException(EXERCISE_NOT_FOUND));
+                    return CompletedExercise.create(c, history, exercise.getNames());
+                }).collect(Collectors.toList());
+        completedExerciseRepository.saveAll(completedExercises);
     }
 
     public List<WorkoutHistoryDto> getWorkoutHistory(Long memberId, Pageable pageable) {
         Page<WorkoutHistory> histories = workoutHistoryRepository.getWorkoutHistory(memberId, pageable);
         List<WorkoutHistoryDto> historiesDto = histories.map(WorkoutHistoryDto::from).stream().toList();
         List<Long> ids = historiesDto.stream().map(WorkoutHistoryDto::getWorkoutHistoryId).collect(Collectors.toList());
-        List<WorkoutHistoryFile> files = workoutHistoryRepository.getWorkoutHistoryFile(ids);
-        return historiesDto.stream().map(h -> {
-            List<WorkoutHistoryFileDto> thisFiles = files.stream().map(WorkoutHistoryFileDto::from)
-                    .filter(f -> f.getWorkoutHistoryId() == h.getWorkoutHistoryId()).collect(Collectors.toList());
-            h.setFiles(thisFiles);
-            return h;
-        }).collect(Collectors.toList());
+        historiesDto = setHistoryListFile(historiesDto, ids);
+        List<WorkoutHistoryDto> result = setHistoryListExercise(historiesDto, ids);
+        return result.isEmpty() ? null : result;
     }
 
     public List<WorkoutHistoryDto> getWorkoutHistoryByTrainer(Long trainerId, Pageable pageable) {
         Page<WorkoutHistory> histories = workoutHistoryRepository.getWorkoutHistoryByTrainer(trainerId, pageable);
         List<WorkoutHistoryDto> historiesDto = histories.map(WorkoutHistoryDto::from).stream().toList();
         List<Long> ids = historiesDto.stream().map(WorkoutHistoryDto::getWorkoutHistoryId).collect(Collectors.toList());
-        List<WorkoutHistoryFile> files = workoutHistoryRepository.getWorkoutHistoryFile(ids);
-        return historiesDto.stream().map(h -> {
-            List<WorkoutHistoryFileDto> thisFiles = files.stream().map(WorkoutHistoryFileDto::from)
-                    .filter(f -> f.getWorkoutHistoryId() == h.getWorkoutHistoryId()).collect(Collectors.toList());
-            h.setFiles(thisFiles);
-            return h;
-        }).collect(Collectors.toList());
+        historiesDto = setHistoryListFile(historiesDto, ids);
+        List<WorkoutHistoryDto> result = setHistoryListExercise(historiesDto, ids);
+        return result.isEmpty() ? null : result;
     }
 
     public WorkoutHistoryDto getWorkoutHistoryDetail(Long workoutHistoryId) {
         WorkoutHistory history = workoutHistoryRepository.findByWorkoutHistoryIdAndDelYnFalse(workoutHistoryId)
                 .orElseThrow(() -> new CustomException(WORKOUT_HISTORY_NOT_FOUND));
-        List<Long> ids = Arrays.asList(history.getWorkoutHistoryId());
-        List<WorkoutHistoryFile> files = workoutHistoryRepository.getWorkoutHistoryFile(ids);
-        List<WorkoutHistoryFileDto> filesDto = files.stream().map(WorkoutHistoryFileDto::from).collect(Collectors.toList());
-        return WorkoutHistoryDto.from(history, filesDto);
+        List<Long> ids = List.of(history.getWorkoutHistoryId());
+        WorkoutHistoryDto historyDto = setHistoryFile(WorkoutHistoryDto.from(history), ids);
+        return setHistoryExercise(historyDto, ids);
     }
 
     @Transactional
@@ -97,6 +98,7 @@ public class WorkoutHistoryService {
         WorkoutHistory history = workoutHistoryRepository.findByWorkoutHistoryIdAndMemberIdAndDelYnFalse(workoutHistoryId, member.getId())
                 .orElseThrow(() -> new CustomException(WORKOUT_HISTORY_NOT_FOUND));
         history.deleteWorkoutHistory();
+        completedExerciseRepository.deleteAllInBatch(history.getCompletedExercises());
         workoutHistoryLikeRepository.deleteLikeByWorkoutHistoryId(workoutHistoryId);
         history.getHistoryFiles().forEach(file ->
             fileService.deleteFile(file.getFilePath() + separator + file.getFileName() + file.getExtension())
@@ -107,15 +109,19 @@ public class WorkoutHistoryService {
     public WorkoutHistoryDto updateWorkoutHistory(Member member, Long workoutHistoryId, HistoryAddCommand command) {
         WorkoutHistory history = workoutHistoryRepository.findByWorkoutHistoryIdAndMemberIdAndDelYnFalse(workoutHistoryId, member.getId())
             .orElseThrow(() -> new CustomException(WORKOUT_HISTORY_NOT_FOUND));
+        //내용 수정
         history.updateContent(command.getContent());
+        //운동종류 수정
+        completedExerciseRepository.deleteAllInBatch(history.getCompletedExercises());
+        completedExerciseRepository.flush();
+        saveCompletedExercises(history, command);
+        //파일 수정
+        history.deleteFiles();
         history.getHistoryFiles().forEach(file ->
                 fileService.deleteFile(file.getFilePath() + separator + file.getFileName() + file.getExtension())
         );
         fileService.uploadWorkoutFiles(history, command.getFiles());
-        List<Long> ids = Arrays.asList(history.getWorkoutHistoryId());
-        List<WorkoutHistoryFile> files = workoutHistoryRepository.getWorkoutHistoryFile(ids);
-        List<WorkoutHistoryFileDto> filesDto = files.stream().map(WorkoutHistoryFileDto::from).collect(Collectors.toList());
-        return WorkoutHistoryDto.from(history, filesDto);
+        return setHistoryFile(WorkoutHistoryDto.from(history), List.of(history.getWorkoutHistoryId()));
     }
 
     @Transactional
@@ -133,4 +139,39 @@ public class WorkoutHistoryService {
         workoutHistoryLikeRepository.delete(WorkoutHistoryLike.from(WorkoutHistoryLikePK.create(history, member)));
         history.updateLikeCnt(workoutHistoryLikeRepository.getLikeCnt(history.getWorkoutHistoryId()));
     }
+
+    private WorkoutHistoryDto setHistoryFile(WorkoutHistoryDto historyDto, List<Long> ids) {
+        List<WorkoutHistoryFile> files = workoutHistoryRepository.getWorkoutHistoryFile(ids);
+        List<WorkoutHistoryFileDto> filesDto = files.stream().map(WorkoutHistoryFileDto::from).collect(Collectors.toList());
+        historyDto.setFiles(filesDto);
+        return historyDto;
+    }
+
+    private List<WorkoutHistoryDto> setHistoryListFile(List<WorkoutHistoryDto> historiesDto, List<Long> ids) {
+        List<WorkoutHistoryFile> files = workoutHistoryRepository.getWorkoutHistoryFile(ids);
+        return historiesDto.stream().map(h -> {
+            List<WorkoutHistoryFileDto> thisFiles = files.stream().map(WorkoutHistoryFileDto::from)
+                    .filter(f -> f.getWorkoutHistoryId() == h.getWorkoutHistoryId()).collect(Collectors.toList());
+            h.setFiles(thisFiles);
+            return h;
+        }).collect(Collectors.toList());
+    }
+
+    private WorkoutHistoryDto setHistoryExercise(WorkoutHistoryDto historyDto, List<Long> ids) {
+        List<CompletedExercise> exercises = completedExerciseRepository.getCompletedExercise(ids);
+        List<CompletedExerciseDto> exerciseDtos = exercises.stream().map(CompletedExerciseDto::from).collect(Collectors.toList());
+        historyDto.setCompletedExercises(exerciseDtos);
+        return historyDto;
+    }
+
+    private List<WorkoutHistoryDto> setHistoryListExercise(List<WorkoutHistoryDto> historiesDto, List<Long> ids) {
+        List<CompletedExercise> exercises = completedExerciseRepository.getCompletedExercise(ids);
+        return historiesDto.stream().map(h -> {
+            List<CompletedExerciseDto> exerciseDtos = exercises.stream().map(CompletedExerciseDto::from)
+                    .filter(e -> e.getWorkoutHistoryId() == h.getWorkoutHistoryId()).collect(Collectors.toList());
+            h.setCompletedExercises(exerciseDtos);
+            return h;
+        }).collect(Collectors.toList());
+    }
+
 }
